Fix button text colour appearing as blue on iOS

--- a/src/styles/themes/classic.css
+++ b/src/styles/themes/classic.css
@@ -210,6 +210,7 @@ body.classic button.button {
 
 body.classic button.button > * {
     color: black;
+    font-weight: bold;
 }
 
 /* NTS: Hover color still appears and won't go away after tapping elsewhere on iOS.
